# PWA_AttendanceRecordSystem

./: .gitignore  AGENT.md  CLAUDE.md  MANUAL_TESTING_GUIDE.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .env.production.example  Dockerfile  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 4ade4331a4c7_initial_schema.py  a1b2c3d4e5f6_add_attendance_reasons.py  a7b8c9d0e1f2_add_overtime_hours.py  b2c3d4e5f6a7_add_late_and_early_leave_status.py  b8c9d0e1f2a3_add_reports_to_and_rank_to_employees.py  c3d4e5f6a7b8_add_absent_status.py  c9d0e1f2a3b4_add_webauthn_challenges.py  d4e5f6a7b8c9_add_terminated_at_to_employees.py  e5f6a7b8c9d0_add_password_changed_at_to_employees.py  f6a7b8c9d0e1_leave_remarks_and_monthly_submission.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth_middleware.py  rate_limiter.py  scope.py
backend/app/models/: __init__.py  attendance_log.py  attendance_reason.py  authenticator.py  daily_attendance_summary.py  employee.py  monthly_submission.py  system_config.py  webauthn_challenge.py
backend/app/repositories/: attendance_repository.py  authenticator_repository.py  employee_repository.py  monthly_submission_repository.py  reason_repository.py  summary_repository.py  system_config_repository.py  webauthn_challenge_repository.py
backend/app/routers/: attendance.py  auth.py  employees.py  leave_types.py  monthly_submissions.py  nfc.py  org_hierarchy.py  reasons.py  reports.py  system_config.py
backend/tests/: conftest.py
(+177 files in other folders)
